--- a/myportforio-site/index.html
+++ b/myportforio-site/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width" />
         <link href="styles/style.css" rel="stylesheet" />
+        
 
         <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
@@ -14,14 +15,16 @@
 
     <body>
         <div class ="container">
-            <h1>my profiel</h1>
+            <h1>my profile</h1>
             <img class="profile-image" src="images/img-profile.HEIC" alt="image of me climbing a mountain"/>
 
-            <p>Name:Nana.Fujishima</p>
-            <p>It's learning HTML!</p>
+            <p>Hello👋 I'm NanaFujishima</p>
+            <p>Creating a Portfolio site!</p>
+
             <a href="https://github.com/NanaFujishima">
                 <img class="link-logo" src="images/github-mark.svg"></a>
         </div>
+        <script src="scripts/main.js"></script>
     </body>
 
     
